# ai-tools

./: README.md
algorithms/sorting_algorithms/: Cargo.toml  README.md  test_report.md
algorithms/sorting_algorithms/src/: lib.rs  main.rs
algorithms/sorting_algorithms/tests/: sorting_tests.rs
algorithms/sorting_algorithms_c/: CMakeLists.txt  performance_test.c  performance_test_simple.c  sorting_algorithms.c  sorting_algorithms.h  test_report.md  test_sorting.c
algorithms/sorting_algorithms_c2/: Makefile  README.md  sorting_algorithms.c  sorting_algorithms.h  test_functionality.c  test_performance.c  test_report.md
algorithms/sorting_algorithms_cpp/: CMakeLists.txt  README.md
algorithms/sorting_algorithms_cpp/include/: sorting_algorithms.h
algorithms/sorting_algorithms_cpp/src/: sorting_algorithms.cpp
algorithms/sorting_algorithms_cpp/tests/: test_sorting.cpp
algorithms/sorting_algorithms_python/: README.md  SUMMARY.txt  main.py
algorithms/sorting_algorithms_python/sorting_algorithms/: __init__.py  bubble_sort.py  bucket_sort.py  counting_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  radix_sort.py  selection_sort.py  shell_sort.py
algorithms/sorting_algorithms_python/tests/: __init__.py  conftest.py  test_bubble_sort.py  test_bucket_sort.py  test_counting_sort.py  test_heap_sort.py  test_insertion_sort.py  test_merge_sort.py  test_quick_sort.py  test_radix_sort.py  test_selection_sort.py  test_shell_sort.py
block_partion/: README.md  example_usage.py  kilo_QA.md
block_partition/: partition_reader.py  test_partition_reader.py
stm32_bootloader/: CMakeLists.txt  README.md
stm32_bootloader/cmake/: arm-none-eabi-toolchain.cmake
stm32_bootloader/include/: bootloader.h  crc32.h  flash_driver.h  peripherals.h  protocol.h  transport.h
stm32_bootloader/linker/: bootloader.ld
stm32_bootloader/src/: bootloader.c  crc32.c  flash_driver.c  main.c  peripherals.c  protocol.c  startup_stm32f407xx.s  system_stm32f4xx.c  transport.c  transport_can.c  transport_uart.c
